[package]
name = "gtest_runner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
atty = "0.2.14"
clap = { version = "4.5.23", features = ["derive", "wrap_help"] }
colored = "2.2.0"
goblin = "0.9.2"
rayon = "1.10.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
walkdir = "2.5.0"
