[package]
name = "gtest_runner"
version = "0.1.0"
edition = "2021"

[dependencies]
elf_parser = { path = "../elf_parser/" }
anyhow = "1.0.95"
atty = "0.2.14"
bytemuck = { version = "1.21.0", features = ["derive"] }
clap = { version = "4.5.23", features = ["derive", "wrap_help"] }
colored = "2.2.0"
crossbeam = "0.8.4"
faccess = "0.2.4"
ignore = "0.4.23"
rayon = "1.10.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
walkdir = "2.5.0"
